Pull up following revision(s) (requested by martin in ticket #1317): 	sys/arch/sparc/include/psl.h: revision 1.45 Add memory clobbers to the inline assembler modifying/testing the %psr register, to avoid the compiler reordering instructions out of critical sections. Should fix PR port-sparc/41372.